--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2  # 检出代码到构建环境
 
       - name: Set up CMake
-        uses: actions/setup-cmake@v1  # 设置 CMake 环境
+        uses: actions/setup-cmake@v2  # 使用最新版的 CMake 动作
 
       - name: Set up Visual Studio
         uses: microsoft/setup-msbuild@v1  # 设置 MSBuild 和 Visual Studio 编译器
