--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,9 @@ name: Build and Test DLL
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build:
@@ -16,13 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up MSBuild (including CMake)
+      - name: Set up Visual Studio
         uses: microsoft/setup-msbuild@v1
-        with:
-          vs-version: 'latest'  # 使用最新版本的 Visual Studio
 
       - name: Configure CMake
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release -S .
 
       - name: Build with CMake
         run: cmake --build build --config Release
+
+      - name: Upload DLL artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: SmartExceptionHandler-DLL
+          path: build/output/Release/*.dll
