--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,36 @@
-name: Build and Test DLL
+name: Build VEHGuardian (Windows x64)
 
 on:
   push:
-    branches:
-      - main   # 当推送到 main 分支时触发
+    branches: [ main ]
   pull_request:
-    branches:
-      - main   # 当合并 PR 到 main 时触发
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: windows-latest  # 使用 Windows 环境构建
-
+  build-windows:
+    runs-on: windows-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4  # 使用最新版本
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Set up MSBuild (includes CMake)
-        uses: microsoft/setup-msbuild@v2
+      - name: Setup CMake
+        uses: lukka/get-cmake@v4
 
-      - name: Configure CMake
-        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -S .
+      - name: Configure (Visual Studio 2022 x64)
+        run: cmake -S . -B build -G "Visual Studio 17 2022" -A x64 -DCMAKE_BUILD_TYPE=Release
 
-      - name: Build with CMake
-        run: cmake --build build --config Release
+      - name: Build (Release)
+        run: cmake --build build --config Release --target VEHGuardian -v:minimal
 
-      # ✅ 上传编译好的 DLL 文件（使用 v4）
-      - name: Upload DLL artifact
+      - name: Package artifact
+        run: |
+          mkdir -p artifacts
+          copy build\bin\Release\VEHGuardian.dll artifacts\VEHGuardian.dll
+          copy build\bin\Release\VEHGuardian.pdb artifacts\VEHGuardian.pdb >nul 2>nul || echo "no pdb"
+          powershell -Command "Compress-Archive -Path artifacts\* -DestinationPath artifacts\VEHGuardian_artifact.zip -Force"
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SmartExceptionHandler-DLL
-          path: build/output/Release/*.dll
+          name: VEHGuardian-artifact
+          path: artifacts/VEHGuardian_artifact.zip
